[gd_scene load_steps=6 format=2]

[ext_resource path="res://Resources/Images/thing1.png" type="Texture" id=1]
[ext_resource path="res://FlashScreenOpen.gd" type="Script" id=2]
[ext_resource path="res://Resources/Images/thing2.png" type="Texture" id=3]
[ext_resource path="res://Resources/Images/thing3.png" type="Texture" id=4]
[ext_resource path="res://Resources/Sounds/background.mp3" type="AudioStream" id=5]

[node name="FlashScreenOpen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 0.643137 )

[node name="Thing1" type="TextureRect" parent="."]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 1 )

[node name="Thing2" type="TextureRect" parent="."]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 3 )

[node name="Thing3" type="TextureRect" parent="."]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 4 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
autoplay = true

[connection signal="resized" from="." to="." method="_on_FlashScreenOpen_resized"]
